# Screenlytics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  main.py
backend/services/: data_service.py  ollama_service.py
marketing/: index.html
public/: index.html
src/: App.js  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  blocker.rs  commands.rs  config.rs  db.rs  integrations.rs  main.rs  team.rs  tracker.rs
src/app/: App.tsx
src/app/store/: activityStore.ts  aiStore.ts  teamStore.ts
src/components/: AIChatPanel.js  Charts.js  InsightsPanel.js  KPICard.js  Sidebar.js
src/components/charts/: AppBreakdown.tsx  FocusScoreChart.tsx  HourlyHeatmap.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/onboarding/: Onboarding.tsx
src/pages/: Dashboard.tsx  FocusSession.tsx  Insights.tsx  Settings.tsx  Team.tsx  Timeline.tsx
