[package]
name = "screenlytics-enterprise"
version = "1.0.0"
description = "Screenlytics Enterprise - AI-powered workforce focus intelligence"
authors = ["Screenlytics Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "screenlytics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "screenlytics-enterprise"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
objc = "0.2"
cocoa = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }
winapi = { version = "0.3", features = ["processthreadsapi", "winuser", "psapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
std::process = "1"
std::time = "1"
